frontend/test/should_pass/hom_001.grg
rule r {
	x:Node -e:Edge-> y:Node --> z:Node;
	hom(x, y);

	replace {
		x <-:Edge- y <-- z;
	}
}

